use webcal links

--- a/projects/gnocal/templates/landing_page.html
+++ b/projects/gnocal/templates/landing_page.html
@@ -55,7 +55,18 @@
 			To use gnocal, just visit a URL like:
 		</p>
 
-		<pre><code>https://gnocal.aiblabs.net/gno.land/r/buidlthefuture000/events/gnolandlaunch/calendar?format=ics</code></pre>
+		<a href="/gno.land/r/buidlthefuture000/events/gnolandlaunch" style="color: inherit; text-decoration: none;">
+			<pre><code>https://gnocal.aiblabs.net/gno.land/r/buidlthefuture000/events/gnolandlaunch/?format=ics</code></pre>
+		</a>
+
+		<p>
+			Or enter a realm below:
+		</p>
+
+		<form action="/" method="get">
+			<input type="text" name="q" placeholder="/r/buidlthefuture000/events/gnolandlaunch" required>
+			<button type="submit">Get Calendar</button>
+		</form>
 
 		<p>
 			Then copy that link into your calendar app as a subscription. Your users will automatically see updates to your realm's events, right in their calendar.
